fixed alignment problem with reveal box on small screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -43,8 +43,37 @@ section {
   position: fixed !important;
   top: 0 !important;
   left: 0 !important;
-  width: 100% !important;
+  max-height: 80%;
   margin: 0 auto;
+}
+
+.rev-title {
+  vertical-align: middle;
+  font-weight: bold;
+  font-size: 120%;
+  color: #222;
+  margin-left: 2em;
+  float: right;
+}
+
+.rev-nom {
+  float: none;
+  padding: 0.3em;
+  width: 80%;
+  position: relative;
+}
+
+@media screen and (min-width: 40em) {
+  .rev-nom {
+    float: left;
+    width: 18%;
+  }
+  .img {
+    max-width: 50%;
+  }
+  .rev-title {
+    display: none;
+  }
 }
 
 input#username, input#email {
@@ -99,10 +128,6 @@ footer div {
   color: $text;
 }
 
-.small-nom {
-  display: inline-block;
-}
-
 .pts {
   float: right;
 }
@@ -131,11 +156,15 @@ footer div {
   }
 }
 
+.rev-nom .picked {
+  border: 2px solid $val-ok;
+}
+
 .poster {
   border: 1px solid $body;
 }
 
-.pick-img, .small-nom > img {
+.poster > img {
   width: 171px;
   height: 254px;
 }
